Fix site-header z-index

--- a/static/less/root.less
+++ b/static/less/root.less
@@ -23,21 +23,20 @@
   }
 
   .site-header {
-    z-index: 1000;
     height: 50px;
 
     .header-menu {
-      z-index: 2;
       position: absolute;
       left: 40px;
       top: 25px;
+      z-index: 2;
 
       a {
         color: @black;
         padding-bottom: 3px;
 
         &:not(.hamburger) {
-          margin-right: 20px;  
+          margin-right: 20px;
         }
 
         &.toggle-child-menu {
@@ -60,7 +59,7 @@
       left: 49%;
       top: 18px;
       width: 30px;
-      z-index: 1000;
+      z-index: 2;
     }
   }
 
@@ -264,7 +263,7 @@ section {
   margin-top: -55px !important;
   border-bottom: none;
   margin: 0;
-  
+
   .subtitle {
     .sl-md;
     color: @gray6;
@@ -347,7 +346,7 @@ section {
 
     &:first-of-type {
       padding: 5px 10px;
-      border-bottom: 1px solid @white;  
+      border-bottom: 1px solid @white;
     }
   }
 
@@ -456,7 +455,7 @@ section {
       border-color: transparent;
       -webkit-box-shadow: none !important;
       -moz-box-shadow: none !important;
-      box-shadow: none !important;        
+      box-shadow: none !important;
     }
 
     &:focus:invalid {
